2018-08-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (clean): remove *.idb files.
	* dll.c: replace 'extern "C"' with macros __PTW32_BEGIN_C_DECLS/__PTW32_BEGIN_C_DECLS
	for consistency tidy-up; add comment re __ptw32_autostatic_anchor() function.
	* implement.h (__ptw32_autostatic_anchor): add __PTW32_BEGIN_C_DECLS/__PTW32_BEGIN_C_DECLS
	envelope.

2018-08-08  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: "nmake realclean VC VC-static" and similar wasn't remaking pthread.obj.
	* common.mk: changes to accommodate the above.
	* GNUmakefile: use changes in common.mk but still has problem with
	"make realclean GC GC-static" and similar.
	* configure.ac (AC_INIT): package name change.

2018-08-08  Mark Pizzolato <markpizzolato dash pthreads dash win32 at subscriptions dot pizzolato dot net>

	* config.h (NEED_FTIME): Removed
	* _ptw32.h (NEED_FTIME): Removed.
	* ptw32_timespec.c (NEED_FTIME): Removed conditional.
	* ptw32_relmillisecs: Fix long-standing bug in NEED_FTIME code; remove NEED_FTIME
	and all !NEED_FTIME code; compare nanoseconds and convert to milliseconds
	at the end.
	* implement.h (NEED_FTIME): remove conditionals.
	* pthread.h: Remove Borland compiler time types no longer needed.
	* configure.ac (NEED_FTIME): Removed check.
	
2018-08-07  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile.in (DLL_VER): rename as PTW32_VER.
	* Makefile (DLL_VER): Likewise.
	* Bmakefile (DLL_VER): Likewise; does anyone use this anymore?
	* pthread.h: Move internal library stuff from pthread.h to _pthw32.h
	* _ptw32.h: As above.
	* ANNOUNCE: Update.
	* NEWS: Update.
	* Makefile: Static libraries renamed to libpthreadV*

2018-07-22  Mark Pizzolato <markpizzolato dash pthreads dash win32 at subscriptions dot pizzolato dot net>

	* _ptw32.h: Restore support for compiling as static (with /MT or /MTd);
	define int64_t and uint64_t as typedefs rather than #defines.
	* dll.c: Likewise.