@@ -120,15 +120,19 @@ typedef int foo;
  * needed, we need a way to prevent the linker from optimizing away this
  * module. The pthread_win32_autostatic_anchor() hack below (and in
  * implement.h) does the job in a portable manner.
+ *
+ * Make everything "extern" to evade being optimized away.
+ * Yes, "extern" is implied if not "static" but we are indicating we are
+ * doing this deliberately.
  */
 
-static int on_process_init(void)
+extern int __ptw32_on_process_init(void)
 {
     pthread_win32_process_attach_np ();
     return 0;
 }
 
-static int on_process_exit(void)
+extern int __ptw32_on_process_exit(void)
 {
     pthread_win32_thread_detach_np  ();
     pthread_win32_process_detach_np ();
@@ -136,19 +140,19 @@ static int on_process_exit(void)
 }
 
 #if defined(__GNUC__)
-__attribute__((section(".ctors"), used)) static int (*gcc_ctor)(void) = on_process_init;
-__attribute__((section(".dtors"), used)) static int (*gcc_dtor)(void) = on_process_exit;
+__attribute__((section(".ctors"), used)) extern int (*gcc_ctor)(void) = __ptw32_on_process_init;
+__attribute__((section(".dtors"), used)) extern int (*gcc_dtor)(void) = __ptw32_on_process_exit;
 #elif defined(_MSC_VER)
 #  if _MSC_VER >= 1400 /* MSVC8+ */
 #    pragma section(".CRT$XCU", long, read)
 #    pragma section(".CRT$XPU", long, read)
-__declspec(allocate(".CRT$XCU")) static int (*msc_ctor)(void) = on_process_init;
-__declspec(allocate(".CRT$XPU")) static int (*msc_dtor)(void) = on_process_exit;
+__declspec(allocate(".CRT$XCU")) extern int (*msc_ctor)(void) = __ptw32_on_process_init;
+__declspec(allocate(".CRT$XPU")) extern int (*msc_dtor)(void) = __ptw32_on_process_exit;
 #  else
 #    pragma data_seg(".CRT$XCU")
-static int (*msc_ctor)(void) = on_process_init;
+extern int (*msc_ctor)(void) = __ptw32_on_process_init;
 #    pragma data_seg(".CRT$XPU")
-static int (*msc_dtor)(void) = on_process_exit;
+extern int (*msc_dtor)(void) = __ptw32_on_process_exit;
 #    pragma data_seg() /* reset data segment */
 #  endif
 #endif
