@@ -2,7 +2,8 @@
 
 	* Makefile (clean): remove *.idb files.
 	* dll.c: replace 'extern "C"' with macros __PTW32_BEGIN_C_DECLS/__PTW32_BEGIN_C_DECLS
-	for consistency tidy-up; add comment re __ptw32_autostatic_anchor() function.
+	for consistency tidy-up; add comment re __ptw32_autostatic_anchor() function;
+	make our static constructor/destructors "extern" to avoid optimisers.
 	* implement.h (__ptw32_autostatic_anchor): add __PTW32_BEGIN_C_DECLS/__PTW32_BEGIN_C_DECLS
 	envelope.
 
